# fob-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  dev.py  entrypoint.sh  pyproject.toml  test.py  test_jwt.py
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/config/: headscale.yml  traefik.yml
.github/workflows/: docker-release.yml
fob_api/: __init__.py  __main__.py  config.py  database.py  mail.py  main.py  openstack.py  serializer.py  vpn.py  worker.py
fob_api/auth/: __init__.py
fob_api/managers/: __init__.py  openstack_manager.py  proxy_manager.py  token_manager.py  user_manager.py
fob_api/models/: __init__.py  token.py  user.py
fob_api/routes/: __init__.py  devices.py  headscale.py  openstack.py  proxy.py  quota.py  status.py  token.py  users.py  vpn.py
fob_api/tasks/: core.py  dns_cmd.py  firezone.py  headscale.py  openstack.py
fob_api/tests/: conftest.py  test_token.py  test_users.py
migrations/: env.py
migrations/versions/: 2024_11_02_1324-d22ae315983a_init_user.py  2024_11_02_1352-e98c81fd511d_add_last_synced_field_to_user.py  2024_11_06_0939-ec4a669f208a_add_subnet_list_for_user_class.py  2024_11_19_2011-91572ab71ba1_add_user_password_reset_class.py  2024_11_19_2200-5541b16183e2_set_unique_for_username_and_email.py  2024_12_10_2223-90979cd11ef8_add_headscale_policy_models.py  2024_12_18_2023-a28c3a3aa218_drop_deprecated_col.py  2025_01_14_2033-95f183d7afd0_add_openstack_quota_models.py  2025_02_03_2039-aa1757ace187_add_unique_to_project_name.py  2025_02_05_1931-22f19d8927c2_add_token_register.py  (+3 more)
scripts/: token_reader.py
templates/: register_device.html.j2
(+20 files in other folders)
