[tool.poetry]
name = "fob-api"
version = "0.1.0"
description = "FastOnBoard-API"
authors = ["msterhuj <gabin.lanore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlmodel = "^0.0.22"
python-dotenv = "^1.0.1"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
bcrypt = "^3.2.0"
celery = "^5.4.0"
redis = "^5.2.0"
flower = "^2.0.1"
firezone-client = "^0.1.0"
alembic = "^1.13.3"
pymysql = "^1.1.1"
python-keystoneclient = "^5.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
